[tool.poetry]
name = "tile"
version = "0.1.0"
description = ""
authors = ["Scott Syms <scottsyms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiledb = "^0.23.4"
pandas = "^2.1.3"
ipython = "^8.17.2"
pyarrow = "^14.0.1"
numpy = "^1.26.2"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
